--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
         }
 
 
-        }
+        
         header img{
           width: 100px;
         }
@@ -94,7 +94,7 @@
           font-weight: bold;
         }
 
-        }
+        
 
         nav {
             background-color: #01579b;
@@ -179,7 +179,7 @@
                   <li data-i18n="opis3">Familiekarakter van het bedrijf – Dankzij nauwe klantrelaties en flexibiliteit passen wij onze diensten aan op individuele behoeften.</li><br>
                   <li data-i18n="opis0">Stiptheid en betrouwbaarheid – Wij zorgen ervoor dat elke ruimte perfect schoon is, altijd op tijd.</li><br>
                 </ul>
-                <h1 data-i18n="dlaczegomy3">Wij bieden:</h1>
+                <h1 data-i18n="dlaczegomy3">Wij bieden</h1>
                 <ul>
                   <li data-i18n="opis4">Schoonmaak van kantoren en commerciële ruimtes</li><br>
                     <li data-i18n="opis5">Onderhoud van netheid in kinderdagverblijven en onderwijsinstellingen</li><br>
@@ -296,7 +296,7 @@
         opis2:"Professionalism and experience – For years, we have been providing cleaning services in various facilities, paying attention to every detail.",
           opis3:"Family character of the company – Thanks to close relationships with clients and flexibility, we tailor our services to individual needs.",
           opis0:"Punctuality and reliability – We ensure that every space is perfectly clean, always on time.",
-        dlaczegomy3:"We offer:",
+        dlaczegomy3:"We offer",
       opis4:"Cleaning of offices and commercial spaces",
           opis5:"Maintaining cleanliness in kindergartens and educational institutions",
             opis6:"Cleaning services for offices and public institutions",
